testapp/nginx-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  labels:
    app: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: davidayo97/us-mobile-hello:0639995b3f80e7a14abe34515b7dbf3e622e6d61
        ports:
        - containerPort: 80
